<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ad_unit">ca-app-pub-3800086660783473/8248505432</string>
    <string name="app_name">AMZO</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_checkout">AutoCheckout</string>
    <string name="banner">image</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buy_now">Buy now</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkOut">"You have turned on 
 AutoCheckout"</string>
    <string name="checkOut_as">As soon as we successfully added the phone into cart.We will try and complete your purchase</string>
    <string name="checkOut_enable">Enable this feature allow us to place an order on your behalf</string>
    <string name="checkOut_flipkart">You have enough Flipkart Gift Card Balance.If not,</string>
    <string name="checkOut_how">How it will work?</string>
    <string name="checkOut_pls">Please Ensure:</string>
    <string name="checkOut_rev">revolutionary,right?</string>
    <string name="checkOut_saved">You have only one address saved in your flipkart account</string>
    <string name="click_add"><u><b>Click here to add</b></u></string>
    <string name="click_here"><u><b>Click here to check</b></u></string>
    <string name="com.crashlytics.android.build_id">40f10c5b-7127-472f-8e03-1c68c8da07f6</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="flash_id">id</string>
    <string name="flash_image">image</string>
    <string name="flash_name">name</string>
    <string name="flash_site">site</string>
    <string name="flipkart">flipkart</string>
    <string name="flipkart_login">flipkart_login</string>
    <string name="form_error">Please enter phone name.</string>
    <string name="form_model_message">"Isn't the phone you want to buy listed?"</string>
    <string name="form_request_failed">UhOh! Your request failed.</string>
    <string name="form_request_success">We got your wish :)</string>
    <string name="gotit">Got It</string>
    <string name="gotoBack">Back to app</string>
    <string name="interstitial_full_screen">ca-app-pub-3800086660783473/8248505432</string>
    <string name="isStart">isStart</string>
    <string name="link">link</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="notify">Notification</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="phone_name">Phone Name</string>
    <string name="please_signin">We are checking the login status</string>
    <string name="point_1">1.We add phone to your cart.</string>
    <string name="point_2">2.We click all the important buttons super quick programatically.</string>
    <string name="point_3">3.You own a new phone</string>
    <string name="primary_color">primaryColor</string>
    <string name="pro_tip">Pro Tip</string>
    <string name="quick_tips">Quick Tips</string>
    <string name="redirect">Redirecting...</string>
    <string name="request_now">Request Now</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="salesTiming">saleTiming</string>
    <string name="save_addr">Save Address Now</string>
    <string name="search_menu_title">Search</string>
    <string name="select_variant">Select your variant:</string>
    <string name="sigin">Please Login</string>
    <string name="site_name">site_name</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="text">text</string>
    <string name="text1">Sign in on the next Screen</string>
    <string name="text2">Then After that</string>
    <string name="text3">Do give us a five star rating</string>
    <string name="text4">You will be asked to sign in</string>
    <string name="text5">Automatically the phone will load</string>
    <string name="text6">If it works</string>
    <string name="text7">"We dont store this data 
 Seriously what we will do with your order history?"</string>
    <string name="text_copywright">By using you agree with our</string>
    <string name="text_review">"Used this app to buy famous Redmi phone.
 Worked like a charm"</string>
    <string name="text_splash">"We help you buy phones 
 with code :)"</string>
    <string name="text_terms">Terms and Conditions</string>
    <string name="time">time</string>
    <string name="tips">tips</string>
    <string name="tips_msg_1">Purchasing the product through Gift Vouchers will increase your chance of purchasing by 80%</string>
    <string name="tips_msg_2">"अगर फोन शॉपिग कार्ट में जोड़ने के बाद फोन स्टॉक से बाहर हो गया है। इसे कार्ट से न निकालें।
अगली बिक्री पर अपनी खरीदारी की टोकरी को 11.59 बजे ताज़ा करें। फिर देखें।"</string>
    <string name="tips_msg_3">अगर आप के अकाउंट मैं  डिलीवरी एड्रेस पहले से सेव है तो आपकी खरीद का मौका 20% बढ़ जाएग। </string>
    <string name="title">Review Pls</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="trying">We are trying to click...</string>
    <string name="variant">Variants</string>
    <string name="variant_Device_id">deviceId</string>
    <string name="variant_color">color</string>
    <string name="variant_image">image</string>
    <string name="variant_link">link</string>
    <string name="variant_memory">memory</string>
    <string name="variant_name">name</string>
    <string name="variant_ram">ram</string>
    <string name="web_link1">http://fkrt.it/VUgr3muuuN</string>
    <string name="web_link3">http://fkrt.it/VUTZJbuuuN</string>
    <string name="which_phone_you_wanna_buy">आप कोन सा मोबाइल या प्रोडक्ट लेना चाहते ह? </string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="tab_flipkart">Flipkart</string>
    <string name="tab_amazon">Amazon</string>
    <string name="tab_ajio">Ajio</string>
    <string name="tab_snapdeal">Snapdeal</string>
    <string name="tab_myntra">Myntra</string>
    <string name="title_activity_normal_web_view">NormalWebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="title_activity_pre_search">PreSearchActivity</string>
    <string name="tata_cliq">Tata Cliq</string>
</resources>
