<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_gravity="center"
            android:layout_marginTop="40.0dip"
            android:layout_marginBottom="20.0dip"
            android:background="@drawable/rounded_bg"
            android:padding="20.0dip"
            app:srcCompat="@drawable/cart_icon" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:lineSpacingExtra="10.0dip"
            android:text="@string/checkOut"
            android:textColor="@color/black"
            android:textSize="@dimen/textBig"
            android:textStyle="bold" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20.0dip"
            android:text="@string/checkOut_enable"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10.0dip"
            android:gravity="center"
            android:text="@string/checkOut_how"
            android:textColor="@color/black"
            android:textSize="@dimen/textBig" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10.0dip"
            android:gravity="center"
            android:text="@string/point_1"
            android:textColor="@color/black"
            android:textSize="@dimen/textLarge" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10.0dip"
            android:gravity="center"
            android:text="@string/point_2"
            android:textColor="@color/black"
            android:textSize="@dimen/textLarge" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10.0dip"
            android:gravity="center"
            android:text="@string/point_3"
            android:textColor="@color/black"
            android:textSize="@dimen/textLarge" />

        <com.ssvmakers.amzo.autobuyscripts.Utils.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10.0dip"
            android:gravity="center"
            android:text="@string/checkOut_rev"
            android:textColor="@color/black"
            android:textSize="@dimen/textBig" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:onClick="nextScreen"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textLarge" />
</RelativeLayout>